--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -9,63 +9,12 @@ body {
   font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
   line-height: 1.4em;
   color: #4d4d4d;
-  min-width: 230px;
-  max-width: 1000px;
-  margin: 0 auto;
-  -webkit-font-smoothing: antialiased;
-  -moz-font-smoothing: antialiased;
-  font-weight: 300;
-  background-color: #000000;
-}
-
-.app-logo {
-  animation: app-logo-scale infinite 4s linear;
-  height: 80px;
-  width: 80px;
-}
-
-.app-header {
-  background-color: #000;
-  height: 130px;
-  color: aliceblue;
-}
-
-.app-title {
-  font-size: 24px;
-  width: 100%;
-  font-weight: 100;
-  text-align: center;
-  -webkit-text-rendering: optimizeLegibility;
-  -moz-text-rendering: optimizeLegibility;
-  text-rendering: optimizeLegibility;
-}
-
-.app-footer {
-  background-color: #000000;
-  height: 30px;
-  padding: 10px;
-}
-
-.footer-text {
-  color: aliceblue;
-  padding-left: 20px;
-  font-size: 14px;
-}
-
-.game-area {
-  width: 94%;
-  margin: 20px auto;
-}
-
-.game-container {
-  background: #000000;
-  margin: 20px 0 0px 0;
 }
 
 .game {
   display: inline-block;
   background-color: aliceblue;
-  width: max-content;
+  width: 100%;
   overflow: hidden;
 }
 
@@ -75,11 +24,13 @@ body {
 
 .game-cellule {
   display: table-cell;
-  width: 18px;
-  height: 18px;
+  width: 22px;
+  height: 22px;
   border: 1px solid #ccc;
   border-radius: 1px;
   vertical-align: middle;
+  font-weight: 800;
+  user-select: none;
 }
 .cellule-border {
   width: 5px;
@@ -95,24 +46,17 @@ body {
 .cellule-hidden:hover {
   background-color: lightgrey;
 }
-.cellule-marked {
-  background-color: black;
-}
-
 .cellule-revealed {
   background-color: lightgrey;
 }
 
+.cellule-marked {
+  background-color: white;
+  border-radius: 3px;
+  box-shadow: -1px -1px;
+}
 .game-buttons {
   width: 100%;
-  margin-top: 20px;
+  height: 41px;
 }
 
-@keyframes app-logo-scale {
-  from {
-    transform: scale(0.8);
-  }
-  to {
-    transform: scale(1.2);
-  }
-}
